# watsonx-rs

./: .env  .env.example  .gitignore  ARCHITECTURE.md  BUILD_OPTIMIZATION.md  Cargo.toml  EXAMPLES_SUMMARY.md  GETTING_STARTED.md  README.md  SDK_FIXES_SUMMARY.md  TODO.md  clippy.toml
.cargo/: config.toml
docs/: BOTH_SIMPLIFICATIONS_SUMMARY.md  COMPLETION_CHECKLIST.md  CONNECTION_COMPARISON.md  CONNECTION_SIMPLIFICATION.md  EXAMPLES_UPDATED.md  INDEX.md  ORCHESTRATE_CAPABILITIES.md  QUICK_START.md  RELEASE_NOTES.md  SIMPLIFICATION_SUMMARY.md  TESTING_GUIDE.md  WATSONX_AI_COMPARISON.md  WATSONX_AI_QUICK_START.md  WATSONX_AI_SIMPLIFICATION.md
examples/: advanced_generation.rs  basic_generation.rs  basic_simple.rs  batch_generation.rs  chat_with_documents.rs  example_chat.rs  example_code_generation.rs  list_models.rs  model_constants.rs  orchestrate_advanced.rs  orchestrate_chat.rs  orchestrate_example.rs  orchestrate_simple.rs  orchestrate_use_cases.rs  quality_assessment.rs  streaming_generation.rs  streaming_vs_non_streaming.rs  test_agent_documents.rs
src/: client.rs  config.rs  connection.rs  error.rs  lib.rs  models.rs  orchestrate_client.rs  orchestrate_tests.rs  orchestrate_types.rs  sse.rs  tests.rs  types.rs
src/orchestrate/: agent.rs  chat.rs  client.rs  collection.rs  config.rs  connection.rs  mod.rs  run.rs  thread.rs  tool.rs  types.rs
src/snapshots/: cuc_watsonx__tests__snapshot_tests__model_granite_3_3_8b.snap  cuc_watsonx__tests__snapshot_tests__model_granite_4_h_small.snap  cuc_watsonx__tests__snapshot_tests__quality_empty_command.snap  cuc_watsonx__tests__snapshot_tests__quality_error_command.snap  cuc_watsonx__tests__snapshot_tests__quality_login_command.snap  watsonx_rs__tests__snapshot_tests__config_snapshot.snap  watsonx_rs__tests__snapshot_tests__model_constants-2.snap  watsonx_rs__tests__snapshot_tests__model_constants.snap  watsonx_rs__tests__snapshot_tests__quality_assessment_snapshot-2.snap  watsonx_rs__tests__snapshot_tests__quality_assessment_snapshot-3.snap  watsonx_rs__tests__snapshot_tests__quality_assessment_snapshot-4.snap  watsonx_rs__tests__snapshot_tests__quality_assessment_snapshot-5.snap  watsonx_rs__tests__snapshot_tests__quality_assessment_snapshot.snap  wx_watsonx__tests__snapshot_tests__config_snapshot.snap  wx_watsonx__tests__snapshot_tests__model_constants.snap  wx_watsonx__tests__snapshot_tests__quality_assessment_snapshot.snap
tests/: integration_test.rs
