[package]
name = "watsonx-rs"
version = "0.1.0"
edition = "2024"
description = "Unofficial Rust SDK for IBM WatsonX AI platform"
license = "Apache-2.0"
repository = "https://github.com/yingkitw/watsonx-rs"
homepage = "http://watsonx.ai"
documentation = "https://docs.rs/watsonx-rs"
keywords = ["watsonx", "ibm", "ai", "llm", "machine-learning"]
categories = ["api-bindings", "artificial-intelligence", "web-programming"]
authors = ["Ying Kit WONG <yingkitw@ibm.com>"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
futures = "0.3"
url = "2.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
insta = "1.0"
tokio-test = "0.4"