[package]
name = "watsonx-rs"
version = "0.1.0"
edition = "2024"
description = "Unofficial Rust SDK for IBM WatsonX AI platform"
license = "Apache-2.0"
repository = "https://github.com/yingkitw/watsonx-rs"
homepage = "http://watsonx.ai"
documentation = "https://docs.rs/watsonx-rs"
keywords = ["watsonx", "ibm", "ai", "llm", "machine-learning"]
categories = ["api-bindings", "web-programming", "text-processing"]
authors = ["Ying Kit WONG <yingkitw@ibm.com>"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "net", "time", "macros"] }
dotenvy = "0.15"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
insta = "1.0"
tokio-test = "0.4"

[profile.release]
# Optimize for size
opt-level = "z"  # Optimize for size
lto = true       # Link-time optimization
codegen-units = 1 # Better optimization
panic = "abort"  # Smaller panic handling
strip = true     # Remove debug symbols

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true