[package]
name = "watsonx-rs"
version = "0.1.4"
edition = "2024"
description = "Unofficial Rust SDK for IBM WatsonX AI platform"
license = "Apache-2.0"
repository = "https://github.com/yingkitw/watsonx-rs"
homepage = "http://watsonx.ai"
documentation = "https://docs.rs/watsonx-rs"
keywords = ["watsonx", "ibm", "ai", "llm", "agentic"]
categories = ["api-bindings", "web-programming", "text-processing"]
authors = ["Ying Kit WONG <yingkitw@ibm.com>"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
dotenvy = { version = "0.15", optional = true }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = ["dotenv"]
dotenv = ["dep:dotenvy"]

[dev-dependencies]
insta = "1.0"
tokio-test = "0.4"

[profile.release]
# Optimize for size
opt-level = "z"     # Optimize for size
lto = "fat"         # Full link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller panic handling
strip = true        # Remove debug symbols
split-debuginfo = "packed"  # Smaller debug info
debug = false       # No debug info in release
incremental = false # Disable incremental compilation for smaller size

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true

[profile.bench]
# Optimized for benchmarking
inherits = "release"
debug = true

[profile.minimal]
# Ultra-minimal build for deployment
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
split-debuginfo = "packed"
debug = false
incremental = false